force-app/main/default/objects/MIS__c/MIS__c.object-meta.xml
<CustomObject>
    <description>Master Imp SOE</description>
    <label>MIS</label>
    <nameField>
        <displayFormat>M-{00000}</displayFormat>
        <label>MIS  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MISs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>