force-app/main/default/objects/MIS__c/fields/MIS_PlannedEnd__c.field-meta.xml
<CustomField>
    <fullName>MIS_PlannedEnd__c</fullName>
    <label>Planned End</label>
    <type>DateTime</type>
</CustomField>