force-app/main/default/objects/MIS__c/fields/MIS_PlannedStart__c.field-meta.xml
<CustomField>
    <fullName>MIS_PlannedStart__c</fullName>
    <label>Planned Start</label>
    <type>DateTime</type>
</CustomField>