force-app/main/default/objects/MIS__c/fields/MIS_Title__c.field-meta.xml
<CustomField>
    <fullName>MIS_Title__c</fullName>
    <label>MIS Title</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>