force-app/main/default/objects/MIS__c/fields/SOEs__c.field-meta.xml
<CustomField>
    <fullName>SOEs__c</fullName>
    <label>SOEs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>