force-app/main/default/objects/MIS__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>All_Tasks__c</columns>
    <columns>MIS_Title__c</columns>
    <columns>MIS_PlannedStart__c</columns>
    <columns>MIS_PlannedEnd__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>