force-app/main/default/objects/MIS__c/listViews/My_MIS_View.listView-meta.xml
<ListView>
    <fullName>My_MIS_View</fullName>
    <columns>NAME</columns>
    <columns>MIS_Title__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>SOEs__c</columns>
    <filterScope>Everything</filterScope>
    <label>My MIS View</label>
</ListView>